# CaskMCP

./: .gitignore  API_SCOUT_TRANSITION_PLAN.md  ARCHITECTURE.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PLAN.md  SECURITY.md  SPEC.md  STRATEGY.md  findings.md  progress.md  pyproject.toml  server.json  task_plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/caskmcp-drift/: action.yml
.github/actions/caskmcp-gate/: action.yml
.github/workflows/: ci.yaml  demo-live.yaml  drift-check.yaml.example  gate-check.yaml  gate-check.yaml.example  publish-pypi.yaml  spec-watch.yaml  unicode-check.yaml  wow-live.yaml
cask-studio/screenplays/: cask_demo.yaml  hero_comparison.yaml
caskmcp/: __init__.py  __main__.py  branding.py
caskmcp/assets/: __init__.py
caskmcp/cli/: __init__.py  approve.py  auth.py  bundle.py  capture.py  commands_approval.py  commands_mcp.py  commands_workflow.py  compile.py  compliance.py  config.py  confirm.py  demo.py  doctor.py  drift.py  enforce.py  init.py  lint.py  main.py  mcp.py  mint.py  plan.py  playwright_errors.py  propose.py  repair.py  run.py  verify.py  wow.py
caskmcp/core/: __init__.py  network_safety.py  toolpack.py
caskmcp/core/approval/: __init__.py  integrity.py  lockfile.py  signing.py  snapshot.py
caskmcp/core/audit/: __init__.py  logger.py
caskmcp/core/auth/: __init__.py  detector.py  provider.py
caskmcp/core/capture/: __init__.py  har_parser.py  openapi_parser.py  otel_parser.py  playwright_capture.py  redaction_profiles.py  redactor.py  webmcp_capture.py
caskmcp/core/compile/: __init__.py  baseline.py  contract.py  policy.py  tools.py  toolsets.py
caskmcp/core/drift/: __init__.py  engine.py
caskmcp/core/enforce/: __init__.py  confirmation_store.py  decision_engine.py  enforcer.py  engine.py
caskmcp/core/enrich/: llm_classifier.py
caskmcp/core/init/: detector.py
caskmcp/core/normalize/: __init__.py  aggregator.py  flow_detector.py  tagger.py
caskmcp/core/plan/: engine.py
caskmcp/core/proposal/: __init__.py  compiler.py  engine.py  publisher.py
caskmcp/core/repair/: __init__.py  engine.py
caskmcp/core/runtime/: container.py
caskmcp/core/scope/: __init__.py  builtins.py  engine.py  inference.py  parser.py
caskmcp/core/verify/: __init__.py  contracts.py  engine.py  evidence.py  outcomes.py  replay.py
caskmcp/mcp/: __init__.py  _compat.py  meta_server.py  server.py
caskmcp/models/: __init__.py  capture.py  drift.py  endpoint.py  repair.py  scope.py
caskmcp/storage/: __init__.py  filesystem.py
caskmcp/ui/: __init__.py  console.py  discovery.py  echo.py  policy.py  prompts.py  runner.py  tables.py
caskmcp/ui/flows/: __init__.py  config.py  doctor.py  gate_review.py  gate_snapshot.py  init.py  quickstart.py  repair.py  ship.py
caskmcp/utils/: __init__.py  config.py  deps.py  digests.py  locks.py  state.py
docs/: capture-otel.md  ci-gate-policy.md  compatibility-matrix.md  glossary.md  known-limitations.md  playbook-spec.md  publishing.md  scopes.md  threat-model-boundaries.md  troubleshooting.md  user-guide.md  verification-spec.md
docs/releases/: v0.1.0-alpha.1.md  v0.1.0-alpha.2.md  v0.1.0-alpha.3.md  v0.1.0-alpha.4.md
dogfood/github/: .gitignore  DOGFOOD.md  curate_spec.py  toolpack.yaml  vars.env
dogfood/github/lockfile/: caskmcp.lock.pending.yaml
dogfood/jira/: .gitignore  DOGFOOD.md  curate_spec.py  jira-api-scoped.yaml  toolpack.yaml  vars.env
dogfood/jira/artifact/: baseline.json  policy.yaml  tools.json  toolsets.yaml
dogfood/jira/lockfile/: caskmcp.lock.yaml
dogfood/jira/snapshot/: digests.json
examples/: README.md  demo.sh  mint_demo.sh
examples/ci/: drift-check.yml
mcpmint/: __init__.py  __main__.py  branding.py
mcpmint/cli/: __init__.py  approve.py  bundle.py  capture.py  compile.py  config.py  confirm.py  doctor.py  drift.py  enforce.py  main.py  mcp.py  mint.py  plan.py  run.py  serve.py
mcpmint/core/: __init__.py  toolpack.py
mcpmint/core/approval/: __init__.py  integrity.py  lockfile.py  snapshot.py
mcpmint/core/audit/: __init__.py  logger.py
mcpmint/core/capture/: __init__.py  har_parser.py  openapi_parser.py  playwright_capture.py  redactor.py
mcpmint/core/compile/: __init__.py  baseline.py  contract.py  policy.py  tools.py  toolsets.py
mcpmint/core/drift/: __init__.py  engine.py
mcpmint/core/enforce/: __init__.py  confirmation_store.py  decision_engine.py  enforcer.py  engine.py
mcpmint/core/normalize/: __init__.py  aggregator.py  path_normalizer.py
mcpmint/core/plan/: engine.py
mcpmint/core/runtime/: container.py
mcpmint/core/scope/: __init__.py  builtins.py  engine.py  parser.py
mcpmint/mcp/: __init__.py  _compat.py  meta_server.py  server.py
mcpmint/models/: __init__.py  decision.py  endpoint.py  policy.py
mcpmint/storage/: __init__.py  filesystem.py
mcpmint/utils/: __init__.py  canonical.py  config.py  digests.py
scripts/: magic_moment_ci.sh  mcp_smoke.py  prove_twice_demo.py
tests/: __init__.py  conftest.py  helpers.py  test_aggregator_list_body.py  test_approval.py  test_approval_root_resolution.py  test_approval_signer_readonly_verify.py  test_approval_signing.py  test_approve_resign.py  test_approve_snapshot.py  test_auth_detection.py  test_auth_profiles.py  test_auth_security.py  test_bundle_cli.py  test_capture_cli.py  test_capture_hosts_help.py  test_check_ci_snapshot.py  test_compile.py  test_compile_cli.py  test_compile_coverage_metrics.py  test_compile_flow_wiring.py  test_conditional_scope.py  test_config_cli.py  test_config_resolution.py  test_container_runtime_env_vars.py  test_curate_jira_spec.py  test_decision_engine.py  test_decision_parity.py  test_demo_cli.py  test_demo_output.py  test_description_quality.py  test_descriptions.py  test_detector_fastapi.py  test_diff_github_md.py  test_docs_smoke.py  test_doctor_cli.py  test_drift.py  test_endpoint_tags.py  test_enforce_cli.py  test_enforce_gateway.py  (+88 more)
tests/fixtures/: diff_github_md_snapshot.md
